# cfn-mysql-user-provider

./: .buildspec.yaml  .gitignore  .release  Dockerfile  Dockerfile.lambda  Makefile  Pipfile  README.md  mysql_user_provider.py  requirements.txt  samconfig.toml  setup.cfg  template.yml  test-requirements.txt
cloudformation/: cfn-resource-provider.yaml  cicd-pipeline.yaml  complete-stack.yaml  demo-stack.yaml  vpc.yaml
docs/: MySQLUser.md  MySQLUserGrant.md
src/: mysql_user_provider.py
src/cfn_mysql_user_provider/: mysql_database_provider.py  mysql_user_grant_provider.py  mysql_user_provider.py
tests/: README.md  test-requirements.txt  test_mysql_user_grant_provider.py  test_mysql_user_provider.py
