[metadata]
name=cfn_mysql_user_provider
version=0.2.4
author=Mark van Holsteijn & Laurens Knoll @ binx.io
author_email=binx@binx.io
project_urls=
    Source Code = "https://github.com/binxio/cfn-mysql-user-provider"
requires-dist=setuptools

[options]
package_dir=
    =src
packages=find:
install_requires=
    boto3
    mysql-connector-python
    cfn_resource_provider>=1.0.4

[options.packages.find]
where=src